--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -23,3 +23,25 @@ $max-width: 1180px;
     clear: both;
   }
 }
+
+/* Sass map  Bootstrap */
+
+$spacer: 1rem;
+$spacers: (
+  0: 0,
+  1: $spacer * .25,
+  2: $spacer * .5,
+  3: $spacer,
+  4: $spacer * 1.5,
+  5: $spacer * 3,
+  6: $spacer * 2,
+);
+
+
+.mt-0 {
+ margin-top: 0 !important;
+}
+
+.ml-1 {
+ margin-left: ($spacer * .25) !important;
+}
