--- a/scss/pages/_login.scss
+++ b/scss/pages/_login.scss
@@ -46,6 +46,7 @@
     padding: 20px;
     background-color: white;
     flex-direction: column;
+    flex-wrap: wrap;
     @include min-screen($tl){
         flex-direction: row;
         padding: 70px 46px 135px 46px;
@@ -65,9 +66,11 @@
     }
 
     .layout-redes  {
+        margin-top: 20px;
         @include min-screen($tl){
             padding: 0 40px;
             width: 40%;
+            margin-top: 0;
         }
         h3 {
             margin-bottom: 10px;
