--- a/scss/pages/_registro-usuario.scss
+++ b/scss/pages/_registro-usuario.scss
@@ -28,7 +28,10 @@
 }
 
 .box-steps {
-    width: 100%;
+    @include min-screen($tl){
+        width: 80%;
+        margin: 0 auto;
+    }
 }
 /* Steps */
 
@@ -50,6 +53,16 @@
             top: 0.7375rem;
             width: 100%;
             z-index: 0;
+        } 
+        &:nth-child(2)::before {
+            /* width: 80%;
+            left: -40%; */
+            width: 70%;
+            left: -35%;
+        } 
+        &:nth-child(3)::before {
+            width: 70%;
+            left: -35%;
         } 
         &.active {
            a {
@@ -108,12 +121,12 @@
       }
   }
   
- /*  
-  .step .step-item.active a::before {
+
+/*   .step .step-item.active a::before {
     background: #fff;
     border: 0.125rem solid $blue;
-  } */
-  
+  } 
+   */
  /*  .step .step-item .step-item-link.disabled {
     pointer-events: none;
     cursor: default;
