--- a/css/main.css
+++ b/css/main.css
@@ -3458,10 +3458,6 @@ input::placeholder {
   color: white;
   font-weight: bold;
   width: 100%;
-  /* &:hover {
-      background-color: $blue-dark;
-      color:white;
-  } */
 }
 @media only screen and (min-width: 830px) {
   .btn-empresa {
@@ -5380,6 +5376,11 @@ section.section-trabajos {
 .content-page .layout-redes h3 {
   margin-bottom: 10px;
 }
+@media only screen and (min-width: 830px) {
+  .content-page .layout-redes h3 {
+    margin-bottom: 23px;
+  }
+}
 
 .box-redes-login {
   display: -webkit-box;
@@ -5964,16 +5965,114 @@ input[type=checkbox].bigcheck:checked + span.bigcheck-target:after {
   text-decoration: underline;
 }
 
+.page-registro-usuario {
+  /*  background-image: url(../images/page-nuevo-cliente-0.jpg);
+   background-position: 0 0;
+   background-repeat: no-repeat; */
+}
+.page-registro-usuario .main {
+  padding: 10px 0 100px 0;
+}
 .page-registro-usuario .content-page {
   padding: 20px;
 }
 @media only screen and (min-width: 830px) {
   .page-registro-usuario .content-page {
-    padding: 30px 46px 80px 46px;
+    padding: 30px 46px 70px 46px;
   }
 }
 
-/* Sass map  Bootstrap */
+.content-page-tab {
+  background-color: white;
+  margin-top: 20px;
+}
+@media only screen and (min-width: 830px) {
+  .content-page-tab {
+    margin-top: 42px;
+  }
+}
+@media only screen and (min-width: 830px) {
+  .content-page-tab .layout-formulario {
+    width: 60%;
+  }
+}
+.content-page-tab h3 {
+  color: #003287;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 25px;
+  margin-bottom: 23px;
+}
+.content-page-tab .layout-redes {
+  margin-top: 20px;
+}
+@media only screen and (min-width: 830px) {
+  .content-page-tab .layout-redes {
+    padding: 0 40px;
+    width: 40%;
+    margin-top: 0;
+  }
+}
+.content-page-tab .layout-redes h3 {
+  margin-bottom: 10px;
+}
+@media only screen and (min-width: 830px) {
+  .content-page-tab .layout-redes h3 {
+    margin-bottom: 23px;
+  }
+}
+.content-page-tab .layout-texto-portal {
+  margin-top: 20px;
+}
+@media only screen and (min-width: 830px) {
+  .content-page-tab .layout-texto-portal {
+    padding: 0 40px;
+    width: 40%;
+    margin-top: 0;
+  }
+}
+.content-page-tab .layout-texto-portal .title-portal {
+  color: #2274FF;
+  font-weight: bold;
+  font-size: 28px;
+  margin-bottom: 10px;
+}
+@media only screen and (min-width: 830px) {
+  .content-page-tab .layout-texto-portal .title-portal {
+    margin-bottom: 23px;
+  }
+}
+
+.box-registro-tab .nav-tabs {
+  border-bottom: none;
+}
+.box-registro-tab .nav-tabs .nav-link {
+  width: 50%;
+  background-color: #EBEBEB;
+  border: none;
+  padding: 10px;
+  color: #5F6268;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 0;
+  border-radius: 0;
+  text-align: center;
+  padding: 10px;
+}
+@media only screen and (min-width: 830px) {
+  .box-registro-tab .nav-tabs .nav-link {
+    margin-bottom: 23px;
+    font-size: 21px;
+    padding: 20px 36px;
+    -moz-text-align-last: left;
+         text-align-last: left;
+  }
+}
+.box-registro-tab .nav-tabs .nav-link.active {
+  color: #003287;
+  background-color: white;
+}
+
 .box-button {
   margin-top: 2rem;
 }
@@ -5991,17 +6090,18 @@ input[type=checkbox].bigcheck:checked + span.bigcheck-target:after {
 .row-texto-form p {
   color: #5F6268;
   text-align: center;
-  font-size: 14px;
+  font-size: 16px;
+  line-height: 22px;
 }
 
 @media only screen and (min-width: 830px) {
   .box-steps {
-    width: 80%;
+    /* width: 80%; */
+    width: 64%;
     margin: 0 auto;
   }
 }
 
-/* Steps */
 .step {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -6009,6 +6109,12 @@ input[type=checkbox].bigcheck:checked + span.bigcheck-target:after {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   width: 100%;
+  margin-bottom: 1rem;
+}
+@media only screen and (min-width: 830px) {
+  .step {
+    margin-bottom: 3rem;
+  }
 }
 .step .step-item {
   -webkit-box-flex: 1;
@@ -6029,14 +6135,12 @@ input[type=checkbox].bigcheck:checked + span.bigcheck-target:after {
   z-index: 0;
 }
 .step .step-item:nth-child(2)::before {
-  /* width: 80%;
-  left: -40%; */
-  width: 70%;
-  left: -35%;
+  width: 65%;
+  left: -32%;
 }
 .step .step-item:nth-child(3)::before {
-  width: 70%;
-  left: -35%;
+  width: 65%;
+  left: -32%;
 }
 .step .step-item.active a::before {
   background: #fff;
@@ -6090,32 +6194,36 @@ input[type=checkbox].bigcheck:checked + span.bigcheck-target:after {
   z-index: 1;
 }
 
-/*   .step .step-item.active a::before {
-    background: #fff;
-    border: 0.125rem solid $blue;
-  } 
-   */
-/*  .step .step-item .step-item-link.disabled {
-   pointer-events: none;
-   cursor: default;
- } */
-/*   .step .step-item.active ~ .step-item .step-item-link {
-    color: #d4dae3;
-  }
-  .step .step-item.active ~ .step-item .step-item-link::before {
-    background: #d4dae3;
-  }
-  .step .step-item.active ~ .step-item::before {
-    background: #d4dae3;
-  } */
-.home-box {
+/* Page registro 2*/
+.row-layout {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 @media only screen and (min-width: 830px) {
-  .home-box {
-    display: -ms-grid;
-    display: grid;
+  .row-layout {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+.content-nav {
+  padding: 20px;
+}
+@media only screen and (min-width: 830px) {
+  .content-nav {
+    padding: 30px 46px;
+  }
+}
+
+@media only screen and (min-width: 830px) {
+  .content-portal .row-layout {
+    margin-top: 100px;
   }
 }
