--- a/scss/pages/_login.scss
+++ b/scss/pages/_login.scss
@@ -74,6 +74,10 @@
         }
         h3 {
             margin-bottom: 10px;
+            @include min-screen($tl){
+                margin-bottom: 23px;
+            }
+           
         }
     }
 }
