--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,3 +28,4 @@
 @import 'pages/restablecer-contrasena';
 @import 'pages/solicitar-boleta';
 @import 'pages/registro-usuario';
+@import 'pages/cuenta-personas';
