--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -249,3 +249,16 @@
         color:white;
     }
 }
+
+.btn-verde {
+    color: white;
+    font-size: 16px;
+    background: #19CE74;
+    border-radius: 6px;
+    padding: 0.8rem 5.5rem;
+    font-weight: bold;
+    &:hover {
+        color:white;
+        background-color: $green-dark;
+    }
+}
