--- a/scss/pages/_cuenta-personas.scss
+++ b/scss/pages/_cuenta-personas.scss
@@ -1,9 +1,9 @@
 .page-cuenta-personas {
      //border:4px solid red;
-     // background-image: url(../images/page-cuenta-personas.jpg);
+/*      background-image: url(../images/page-cuenta-personas.jpg);
      background-position: top center;
-     background-repeat: no-repeat;
-   /*  .main {
+     background-repeat: no-repeat; */
+    /* .main {
         background-color: transparent;
     }
     .content-page {
@@ -58,7 +58,7 @@
         color: #5F6268;
         font-weight: normal;
         align-items: center;
-        padding: 1.5rem 0.75rem;
+        padding: 1.8rem 0.75rem;
     }
 }
 
@@ -73,6 +73,5 @@
     flex-direction: column;
     @include min-screen($tl){
         flex-direction: row;
-        padding: 44px 40px 70px 40px;
     }
 }
