--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -119,6 +119,7 @@
     font-size: 16px;
     background: #19CE74;
     border-radius: 8px;
+    font-weight: bold;
     &:hover {
         color:white;
         background-color: $green-dark;
@@ -261,4 +262,24 @@
         color:white;
         background-color: $green-dark;
     }
+}
+
+.btn-outline-primary {
+    border: 1px solid #2274FF;
+    border-radius: 8px;
+    font-size: 16px;
+    color: $blue;
+    font-weight: bold;
+}
+
+.row-btn {
+    max-width: 750px;
+    margin:0 auto;
+}
+
+.btn-success {
+    border-radius: 8px;
+    font-size: 16px;
+    color: white;
+    font-weight: bold;
 }
