--- a/scss/pages/_cuenta-personas.scss
+++ b/scss/pages/_cuenta-personas.scss
@@ -1,4 +1,5 @@
 .page-cuenta-personas {
+   /*  page-cuenta-personas2.jpg */
      //border:4px solid red;
 /*      background-image: url(../images/page-cuenta-personas.jpg);
      background-position: top center;
@@ -10,7 +11,6 @@
         background-color: transparent;
     } */
 }
-
 
 
 .content-page-cuenta {
@@ -33,7 +33,6 @@
 .box-form-cuenta {
     display: block;
     .row-agregar {
-       /*  padding: 0 70px; */
         padding: 0 20px 30px 20px;
         @include min-screen($tl){
             padding: 0 70px 30px 70px;
@@ -45,7 +44,6 @@
             font-weight: bold;
             font-size: 16px;
             line-height: 25px;
-            //margin-bottom: 20px;
         }
     }
 }
@@ -68,10 +66,30 @@
     margin: 30px auto;
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
     justify-content: space-between;
     flex-direction: column;
     @include min-screen($tl){
         flex-direction: row;
     }
+}
+
+/* Page cuenta persona 2*/
+.alert-message {
+    display: flex;
+    max-width: 750px;
+    margin: 0 auto;
+    align-items: center;
+    background-color: #d2ffe9;
+    border:none;
+    border-radius: 8px;
+    i {
+        margin-right: 30px;
+    }
+    .texto-mensaje {
+        color:$blue;
+    }
+}
+
+.alert-heading {
+    font-weight: bold;
 }
