--- a/scss/pages/_cuenta-personas.scss
+++ b/scss/pages/_cuenta-personas.scss
@@ -1,7 +1,7 @@
 .page-cuenta-personas {
    /*  page-cuenta-personas2.jpg */
      //border:4px solid red;
-/*      background-image: url(../images/page-cuenta-personas.jpg);
+    /*  background-image: url(../images/page-cuenta-personas2.jpg);
      background-position: top center;
      background-repeat: no-repeat; */
     /* .main {
@@ -92,4 +92,11 @@
 
 .alert-heading {
     font-weight: bold;
+}
+
+.margin-texto {
+    margin-top: 50px;
+    @include min-screen($tl){
+        margin-top: 250px;
+    }
 }
